apps/fleet-sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet
  namespace: fleet-sandbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "2048m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fleet-sandbox.kitzy.net
    secretName: fleet-sandbox-letsencrypt-tls
  rules:
  - host: fleet-sandbox.kitzy.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fleet
            port:
              number: 8080
